freest/test/prog/Invalid/SessionTypes/CaseOnExternalChoice/CaseOnExternalChoice.fst
module CaseOnExternalChoice where

f : +{A: Skip} -> Int
f c = case c of &A _ -> 5
